[gd_scene load_steps=7 format=2]

[ext_resource path="res://environment.tres" type="Environment" id=1]
[ext_resource path="res://assets/meshes/Gizmo.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://src/scripts/CanvasLayer.gd" type="Script" id=3]
[ext_resource path="res://assets/scenes/Packed/TileMap3D.tscn" type="PackedScene" id=4]

[sub_resource type="World" id=1]
environment = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.176471, 0.176471, 0.176471, 0.176471 )

[node name="UI" type="MarginContainer"]
margin_right = 1024.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VC" type="ViewportContainer" parent="."]
margin_right = 1024.0
margin_bottom = 768.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VP" type="Viewport" parent="VC"]
size = Vector2( 1024, 768 )
world = SubResource( 1 )
handle_input_locally = false
hdr = false
render_target_update_mode = 3
shadow_atlas_size = 1

[node name="Tilemap" parent="VC/VP" instance=ExtResource( 4 )]

[node name="TopRight" type="HBoxContainer" parent="."]
margin_left = 855.0
margin_right = 1024.0
margin_bottom = 64.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="VBox" type="VBoxContainer" parent="TopRight"]
margin_right = 101.0
margin_bottom = 64.0

[node name="GridPanel" type="PanelContainer" parent="TopRight/VBox" groups=[
"UI",
]]
margin_right = 101.0
margin_bottom = 34.0
size_flags_vertical = 0

[node name="HBox" type="HBoxContainer" parent="TopRight/VBox/GridPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 94.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="Button" parent="TopRight/VBox/GridPanel/HBox"]
margin_right = 39.0
margin_bottom = 20.0
mouse_filter = 1
toggle_mode = true
pressed = true
text = "Grid"

[node name="X" type="Button" parent="TopRight/VBox/GridPanel/HBox"]
margin_left = 43.0
margin_right = 63.0
margin_bottom = 20.0
mouse_filter = 1
toggle_mode = true
pressed = true
text = "X"

[node name="Z" type="Button" parent="TopRight/VBox/GridPanel/HBox"]
margin_left = 67.0
margin_right = 87.0
margin_bottom = 20.0
mouse_filter = 1
toggle_mode = true
pressed = true
text = "Z"

[node name="HBox" type="HBoxContainer" parent="TopRight/VBox"]
margin_top = 38.0
margin_right = 101.0
margin_bottom = 58.0

[node name="Button" type="Button" parent="TopRight/VBox/HBox"]
margin_right = 49.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Ortho"

[node name="Button2" type="Button" parent="TopRight/VBox/HBox"]
margin_left = 53.0
margin_right = 101.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Persp"

[node name="Gizmo" type="ViewportContainer" parent="TopRight"]
margin_left = 105.0
margin_right = 169.0
margin_bottom = 64.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Viewport" type="Viewport" parent="TopRight/Gizmo"]
size = Vector2( 64, 64 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Gizmo" type="MeshInstance" parent="TopRight/Gizmo/Viewport"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = null

[node name="Cam" type="Spatial" parent="TopRight/Gizmo/Viewport"]
transform = Transform( 1, 0, 0, 0, 0.707102, 0.707112, 0, -0.707112, 0.707102, 0, 0, 0 )

[node name="Camera" type="Camera" parent="TopRight/Gizmo/Viewport/Cam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )
projection = 1
current = true
size = 1.15

[node name="Left" type="VBoxContainer" parent="."]
margin_right = 124.0
margin_bottom = 768.0
mouse_filter = 0
size_flags_horizontal = 0
custom_constants/separation = 0

[node name="Tile" type="Label" parent="Left"]
margin_right = 71.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tile_size = "

[node name="LayersPanel" type="PanelContainer" parent="Left" groups=[
"UI",
]]
margin_top = 14.0
margin_right = 124.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_styles/panel = SubResource( 2 )

[node name="VBox" type="VBoxContainer" parent="Left/LayersPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 122.0
margin_bottom = 160.0
custom_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="Left/LayersPanel/VBox"]
margin_right = 120.0
margin_bottom = 20.0

[node name="Add" type="Button" parent="Left/LayersPanel/VBox/Header"]
margin_right = 37.0
margin_bottom = 20.0
mouse_filter = 1
size_flags_horizontal = 3
text = "add"

[node name="Del" type="Button" parent="Left/LayersPanel/VBox/Header"]
margin_left = 41.0
margin_right = 78.0
margin_bottom = 20.0
mouse_filter = 1
size_flags_horizontal = 3
text = "del"

[node name="Vis" type="Button" parent="Left/LayersPanel/VBox/Header"]
margin_left = 82.0
margin_right = 120.0
margin_bottom = 20.0
mouse_filter = 1
size_flags_horizontal = 3
text = "vis"

[node name="Scroll" type="ScrollContainer" parent="Left/LayersPanel/VBox"]
margin_top = 30.0
margin_right = 120.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 128 )
mouse_filter = 1
size_flags_vertical = 3

[node name="Layers_container" type="VBoxContainer" parent="Left/LayersPanel/VBox/Scroll"]
margin_right = 120.0
size_flags_horizontal = 3

[node name="LevelPanel" type="PanelContainer" parent="Left" groups=[
"UI",
]]
margin_top = 176.0
margin_right = 124.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_styles/panel = SubResource( 2 )

[node name="VBox" type="VBoxContainer" parent="Left/LevelPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 122.0
margin_bottom = 26.0

[node name="HBox" type="HBoxContainer" parent="Left/LevelPanel/VBox"]
margin_right = 120.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Left/LevelPanel/VBox/HBox"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
rect_min_size = Vector2( 42, 0 )
text = "Level"

[node name="SpinBox" type="SpinBox" parent="Left/LevelPanel/VBox/HBox"]
margin_left = 46.0
margin_right = 120.0
margin_bottom = 24.0
mouse_filter = 1
max_value = 5.0
align = 1

[node name="HeightPanel" type="PanelContainer" parent="Left" groups=[
"UI",
]]
margin_top = 204.0
margin_right = 124.0
margin_bottom = 232.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_styles/panel = SubResource( 2 )

[node name="VBox" type="VBoxContainer" parent="Left/HeightPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 122.0
margin_bottom = 26.0

[node name="HBox" type="HBoxContainer" parent="Left/HeightPanel/VBox"]
margin_right = 120.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Left/HeightPanel/VBox/HBox"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "Height"

[node name="SpinBox" type="SpinBox" parent="Left/HeightPanel/VBox/HBox"]
margin_left = 46.0
margin_right = 120.0
margin_bottom = 24.0
mouse_filter = 1
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.5
align = 1

[node name="TilesPanel" type="PanelContainer" parent="Left" groups=[
"UI",
]]
margin_top = 636.0
margin_right = 124.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 10
custom_styles/panel = SubResource( 2 )

[node name="Scroll" type="ScrollContainer" parent="Left/TilesPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 122.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 128 )
mouse_filter = 1

[node name="TilesContainer" type="VBoxContainer" parent="Left/TilesPanel/Scroll"]
margin_right = 120.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="TopRight/VBox/GridPanel/HBox/Grid" to="VC/VP/Tilemap" method="_on_Grid_toggled"]
[connection signal="toggled" from="TopRight/VBox/GridPanel/HBox/X" to="VC/VP/Tilemap" method="_on_axis_toggle" binds= [ 0 ]]
[connection signal="toggled" from="TopRight/VBox/GridPanel/HBox/Z" to="VC/VP/Tilemap" method="_on_axis_toggle" binds= [ 1 ]]
[connection signal="pressed" from="Left/LayersPanel/VBox/Header/Add" to="." method="_on_add_layer_pressed"]
[connection signal="pressed" from="Left/LayersPanel/VBox/Header/Del" to="." method="_on_del_layer_pressed"]
[connection signal="pressed" from="Left/LayersPanel/VBox/Header/Vis" to="." method="_on_layers_visibility_pressed"]
[connection signal="value_changed" from="Left/LevelPanel/VBox/HBox/SpinBox" to="VC/VP/Tilemap" method="_on_change_level"]
[connection signal="value_changed" from="Left/HeightPanel/VBox/HBox/SpinBox" to="VC/VP/Tilemap" method="_on_change_height"]
